2001-08-01  Marius Vollmer  <mvo@zagadka.ping.de>

	* chars.c (scm_char_alphabetic_p, scm_char_numeric_p,
	scm_char_whitespace_p, scm_char_upper_case_p,
	scm_char_lower_case_p, scm_char_is_both_p): Do not require
	characters to fulfill isascii in addition to the primary
	predicate.

2001-07-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (DIGITS, scm_small_istr2int, scm_istr2int,
	scm_istr2flo, scm_istring2number):  Removed.

	(iflo2str, scm_real_p, scm_integer_p):  Use SCM_<foo> instead of
	SCM_SLOPPY_<foo>.

	(t_exactness, t_radix, DIGIT2UINT, XDIGIT2UINT, mem2uinteger,
	mem2decimal_from_point, mem2ureal, mem2complex, scm_i_mem2number):
	Added.

	(scm_string_to_number):  Use new number parser.

	(scm_exact_to_inexact):  Replace dummy by a GPROC, which also
	handles complex numbers.

	* numbers.h (NUMBERSH, SCM_NUMBERS_H): Rename <foo>H to
	SCM_<foo>_H.

	(SCM_INEXACTP, SCM_REALP, SCM_COMPLEXP):  Prefer !SCM_<pred> over
	SCM_N<pred>.

	(scm_istr2int, scm_istr2flo, scm_istring2number):  Removed.

	(scm_i_mem2number):  Added.

	(scm_exact_to_inexact):  Changed signature.

	* read.c (scm_lreadr):  Perform the shortcut test for '+ and '-
	here instead of within scm_i_mem2number.  Call scm_i_mem2number
	instead of scm_istr2int and scm_istring2number.

2001-07-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (scm_lookupcar, scm_m_body, scm_m_lambda, unmemocopy,
	scm_unmemocopy, scm_badargsp, scm_eval_body, CHECK_EQVISH,
	SCM_CEVAL, scm_nconc2last, SCM_APPLY, scm_copy_tree):  Prefer
	!SCM_<pred> over SCM_N<pred>.

	(scm_eval_body):  Remove side effecting code from macro call.

	(SCM_CEVAL, SCM_APPLY):  Remove goto statement and redundant
	SCM_NIMP test.

2001-07-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* pairs.h (SCM_VALIDATE_PAIR):  Use SCM_CONSP, not SCM_ECONSP.

2001-07-29  Marius Vollmer  <mvo@zagadka.ping.de>

	Removed vcell slot from structs.
	
	* struct.h (scm_vtable_index_vcell): Removed.  Renumbered
	subsequent indices.
